Fix spacing around buttons

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -91,6 +91,7 @@ footer > p > a:hover {
 button {
   box-sizing: border-box;
   margin-top: 1rem;
+  margin-bottom: 2rem;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
